--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "gulp-scss-lint": "^0.3.9"
   },
   "dependencies": {
+    "cors": "^2.7.1",
     "dotenv": "^2.0.0",
     "express": "^4.13.4",
     "request": "^2.72.0"
