--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "gulp-sass": "^2.3.1",
     "gulp-scss-lint": "^0.3.9"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^3.5.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
